<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:liftOnScroll="false"
        android:background="@color/colorPrimary">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/margin_2xlarge"
            android:paddingVertical="@dimen/margin_2xSmall"
            android:paddingBottom="@dimen/margin_2xSmall">
            <TextView
                android:id="@+id/tv_search_title"
                style="@style/BoldXXXL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sport"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/margin_4xlarge"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_city"
                android:minHeight="50dp"
                android:layout_marginHorizontal="@dimen/margin_2xlarge"
                android:layout_marginTop="@dimen/margin_2xlarge"
                android:paddingHorizontal="@dimen/margin_2xlarge"
                android:background="@drawable/bg_not_focus_search">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/iv_search"
                    app:srcCompat="@drawable/ic_search"
                    android:layout_centerVertical="true"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/iv_search"
                    android:hint="@string/text_city_search"
                    android:inputType="textPersonName"
                    android:imeOptions="actionDone"
                    style="@style/MediumL"
                    android:textColor="@color/neutral500"
                    android:layout_marginStart="@dimen/margin_4xSmall"
                    android:layout_centerVertical="true"
                    android:background="@null"/>
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginHorizontal="@dimen/margin_2xlarge"
                style="@style/PrimaryButtonStyle"
                android:text="@string/text_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_city"
                android:layout_marginTop="@dimen/margin_2xlarge"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/neutral700"
                android:id="@+id/tv_football"
                android:visibility="gone"
                android:text="@string/text_football"
                style="@style/DemiBold2XL"
                android:layout_marginHorizontal="@dimen/margin_2xlarge"
                android:layout_marginTop="@dimen/margin_2xlarge"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_football_empty"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/margin_2xlarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_football"
                app:layout_constraintEnd_toEndOf="parent">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/empty_football"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:lottie_loop="true"
                    android:layout_centerHorizontal="true"
                    app:lottie_fileName="empty_search.json"
                    app:lottie_autoPlay="true"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/neutral700"
                    style="@style/MediumL"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/empty_football"
                    android:text="@string/text_there_is_no_relevant_data"/>
            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tbl_football"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margin_2xlarge"
                app:layout_constraintTop_toBottomOf="@+id/tv_football">
                <TableRow
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:layout_marginTop="@dimen/margin_2xSmall"
                    android:textAlignment="center"
                    android:weightSum="6">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:text="Match"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/MediumXS"
                        android:textColor="@color/white"
                        android:text="Stadium" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/MediumXS"
                        android:textColor="@color/white"
                        android:text="Country" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:layout_weight="1"
                        android:text="Tour Name" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:layout_weight="1"
                        android:text="Date" />
                </TableRow>
            </TableLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/neutral700"
                android:id="@+id/tv_cricket"
                android:visibility="gone"
                android:text="@string/text_cricket"
                style="@style/DemiBold2XL"
                android:layout_marginHorizontal="@dimen/margin_2xlarge"
                android:layout_marginTop="@dimen/margin_2xlarge"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_cricket_empty"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/margin_2xlarge">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/empty_cricket"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:lottie_fileName="empty_search.json"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/neutral700"
                    style="@style/MediumL"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/empty_cricket"
                    android:text="@string/text_there_is_no_relevant_data"/>
            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tbl_cricket"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/margin_2xlarge">

                <TableRow
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:weightSum="6"
                    android:layout_marginTop="@dimen/margin_2xSmall"
                    android:textAlignment="center">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:text="Match"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/MediumXS"
                        android:textColor="@color/white"
                        android:text="Stadium" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/MediumXS"
                        android:textColor="@color/white"
                        android:text="Country" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:layout_weight="1"
                        android:text="Tour Name" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:layout_weight="1"
                        android:text="Date" />
                </TableRow>
            </TableLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tbl_cricket"
                android:textColor="@color/neutral700"
                android:id="@+id/tv_golf"
                android:visibility="gone"
                android:text="@string/text_golf"
                style="@style/DemiBold2XL"
                android:layout_marginHorizontal="@dimen/margin_2xlarge"
                android:layout_marginTop="@dimen/margin_2xlarge"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_golf_empty"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/margin_2xlarge">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/empty_golf"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="empty_search.json"
                    app:lottie_autoPlay="true"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/neutral700"
                    style="@style/MediumL"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/empty_golf"
                    android:text="@string/text_there_is_no_relevant_data"/>
            </RelativeLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tbl_golf"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margin_2xlarge"
                app:layout_constraintTop_toBottomOf="@+id/tv_golf">
                <TableRow
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:weightSum="6"
                    android:layout_marginTop="@dimen/margin_2xSmall"
                    android:textAlignment="center">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:text="Match"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/MediumXS"
                        android:textColor="@color/white"
                        android:text="Stadium" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/MediumXS"
                        android:textColor="@color/white"
                        android:text="Country" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:layout_weight="1"
                        android:text="Tour Name" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/MediumXS"
                        android:layout_weight="1"
                        android:text="Date" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>